--- a/src/singleton/TemperaturaWindow.form
+++ b/src/singleton/TemperaturaWindow.form
@@ -96,9 +96,12 @@
     </Container>
     <Component class="javax.swing.JSlider" name="jSlider_Temperatura_Fonte_Calor">
       <Properties>
-        <Property name="majorTickSpacing" type="int" value="10"/>
+        <Property name="majorTickSpacing" type="int" value="50"/>
+        <Property name="maximum" type="int" value="300"/>
+        <Property name="minorTickSpacing" type="int" value="50"/>
         <Property name="paintLabels" type="boolean" value="true"/>
         <Property name="toolTipText" type="java.lang.String" value="Temperatura na fonte de calor"/>
+        <Property name="value" type="int" value="150"/>
         <Property name="name" type="java.lang.String" value="" noResource="true"/>
       </Properties>
       <Events>
