--- a/src/singleton/CaldeiraWindow.form
+++ b/src/singleton/CaldeiraWindow.form
@@ -58,7 +58,10 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="4" rowCount="2">
-                <Column editable="false" title=" " type="java.lang.Object"/>
+                <Column editable="false" title=" " type="java.lang.Object">
+                  <Data value="Temperatura"/>
+                  <Data value="Nivel"/>
+                </Column>
                 <Column editable="false" title="Maximo" type="java.lang.Object"/>
                 <Column editable="false" title="Minimo" type="java.lang.Object"/>
                 <Column editable="false" title="Atual" type="java.lang.Object"/>
