--- a/src/singleton/TemperaturaWindow.form
+++ b/src/singleton/TemperaturaWindow.form
@@ -56,7 +56,10 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="4" rowCount="2">
-                <Column editable="false" title=" " type="java.lang.Object"/>
+                <Column editable="false" title=" " type="java.lang.Object">
+                  <Data value="Temperatura"/>
+                  <Data value="Nivel"/>
+                </Column>
                 <Column editable="false" title="Maximo" type="java.lang.Object"/>
                 <Column editable="false" title="Minimo" type="java.lang.Object"/>
                 <Column editable="false" title="Atual" type="java.lang.Object"/>
@@ -100,6 +103,7 @@
         <Property name="maximum" type="int" value="300"/>
         <Property name="minorTickSpacing" type="int" value="50"/>
         <Property name="paintLabels" type="boolean" value="true"/>
+        <Property name="paintTicks" type="boolean" value="true"/>
         <Property name="toolTipText" type="java.lang.String" value="Temperatura na fonte de calor"/>
         <Property name="value" type="int" value="150"/>
         <Property name="name" type="java.lang.String" value="" noResource="true"/>
