adesao do enter

--- a/src/observer/ChatWindow.form
+++ b/src/observer/ChatWindow.form
@@ -119,6 +119,9 @@
       </SubComponents>
     </Container>
     <Component class="javax.swing.JTextField" name="jTextField_Input">
+      <Events>
+        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jTextField_InputKeyPressed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButton_Enviar">
       <Properties>
